[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/BackGroundMusic.gd" type="Script" id=1]

[node name="BackgroundMusic" type="Node2D"]
script = ExtResource( 1 )

[node name="StartScreenMusic" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="EndingScreenMusic" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="StorySceneMusic" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="Level2SceneMusic" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
